Bug Fix : Why us component card h4 text align center

--- a/src/components/About/whyus.module.scss
+++ b/src/components/About/whyus.module.scss
@@ -74,6 +74,7 @@ section {
 				h4 {
 					font-size: 1.1rem;
 					margin-bottom: 0.6em;
+					text-align: center;
 				}
 
 				p {
